# Util-C

./: CMakeLists.txt  README.md  conanfile.py
Test/: FileUtilsTest.c  PermutationTest.c  RandomNormalizedArrayTest.c  StringTest.c  SubsetFromListTest.c  SubsetTest.c
src/: CMakeLists.txt  FileUtils.c  FileUtils.h  Interval.c  Interval.h  Pair.c  Pair.h  Permutation.c  Permutation.h  RandomArray.c  RandomArray.h  StringUtils.c  StringUtils.h  Subset.c  Subset.h  SubsetFromList.c  SubsetFromList.h  Swap.c  Swap.h  Tuple.c  Tuple.h
